# XCai

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  AI智能体建设需求报告.docx  BingSiteAuth.xml  ESkill.md  LLM调用制作Mod员工工作流全流程-修复方案.md  LLM调用制作Mod员工工作流全流程.md  OPC_填写指南.md  README.md  about.html  activities.json  app.py  baidu_urls.txt  baidu_verify_codeva-hVYlSoeYiP.html  case-edu.html  case-manufacture.html  case-park.html  cases.html  contact.html  env.d.ts  eslint.config.js  excel-to-ai.html  honors.html  index.html  main.js  news.html  news.json  nginx-default.conf  nginx-xiu-ci-root.conf  nginx-xiu-ci.conf  package-lock.json  package.json  playwright.config.ts  py-doc-generator.xcemp  requirements.txt  robots.txt  services.html  sitemap.xml  (+12 more)
MODstore_deploy/: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  COMPOSE.md  CONTRIBUTING.md  Dockerfile  alembic.ini  deploy-target.local.ps1.example  deploy.bat  deploy.sh  docker-compose.yml  git-push.bat  git-push.sh  pyproject.toml  restart.bat  runtime_allowlist.json  start-modstore.bat  start-with-alipay.ps1  start_with_alipay.py
MODstore_deploy/alembic/: env.py
MODstore_deploy/chaos/: README.md  chaos_drill.py
MODstore_deploy/docs/: ADR-async-db-migration.md  ADR-routes-registry-retirement.md  ARCHITECTURE.md  COSER_AGGREGATION_COMPLIANCE.md  FRONTEND_AND_GATEWAY_ROADMAP.md  JWT_UNIFIED_AUTH.md  NEUROBUS_ENVIRONMENT.md  OPS_MONITORING.md  PAYMENT_CONTRACT.md  PAYMENT_FULFILLMENT_CHECKLIST.md  PAYMENT_GRAY_RELEASE.md  RAG_KNOWLEDGE_BASE.md  README.md  SERVICE_BOUNDARIES.md  SQLITE_MULTI_DATABASE.md  VIBE_INTEGRATION.md  api-docs.md  dependencies.md  employee_publish_wizard.md  fhd-employee-composition.md  nginx-https-example.conf  observability.md  perf-benchmark-public.md  service-boundaries-and-events.md  service-governance.md  sre-operating-model.md  workbench-employee-fullstack-e2e.md  workbench-employee-impl-flow.md  workbench-make-mod-workflow.md
MODstore_deploy/java_payment_service/: DATABASE_MIGRATION.md  DESIGN_DOC.md  Dockerfile  PERFORMANCE_TEST.md  README.md  pom.xml
MODstore_deploy/market/: .prettierignore  .prettierrc  Dockerfile  env.d.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
MODstore_deploy/modman/: artifact_constants.py  blueprint_scan.py  catalog_publish.py  cli.py  manifest_util.py  store.py
MODstore_deploy/modstore_server/: account_level_service.py  agent_butler_api.py  agent_butler_orchestrate.py  alipay_service.py  aliyun_tts.py  analytics_api.py  app.py  app_helpers.py  audit_logger.py  auth_service.py  author_earnings.py  cache.py  catalog_api.py  catalog_store.py  catalog_sync.py  constants.py  customer_service_api.py  customer_service_orchestrator.py  customer_service_tools.py  developer_api.py  developer_key_export_api.py  developer_scopes.py  email_admin_api.py  email_service.py  embedding_service.py  employee_ai_pipeline.py  employee_ai_scaffold.py  employee_api.py  employee_bench.py  employee_config_v2.py  employee_config_v2_adapter.py  employee_executor.py  employee_impl_planner.py  employee_pack_blueprints_template.py  employee_pack_export.py  employee_pack_standalone_template.py  employee_pack_workflow_bundle.py  employee_runtime.py  employee_skill_register.py  employee_stub_template.py  (+97 more)
MODstore_deploy/perf/: README.md  full_link_smoke.js  local_mock_server.py
MODstore_deploy/scripts/: _remote_deploy_extract.sh  _vibe_check_paths.py  _vibe_probe_mimo.py  _vibe_probe_mimo2.py  _vibe_repack_pack.py  _vibe_run_uvicorn.py  _vibe_test_helpers.py  align_modstore_systemd_to_deploy.sh  backfill_report_eskill_nodes.py  backup_modstore.py  dev_bootstrap_p0_smoke_db.py  dlq_admin.py  docker-daemon-mirror-cn.json  ensure_llm_master_key.py  ensure_modstore_symlink.sh  export_openapi.py  fix_server_env_unify.sh  generate_event_reference.py  grant_admin.py  inspect_auth_database.py  install_docker_engine.sh  java-release.sh  migrate_kb_redis_to_chroma.py  node-release.sh  p0_api_smoke.py  patch_xcmax_app_factory.py  payment_gray_release_check.py  push-market-to-server.ps1  push-market-to-server.sh  python-release.sh  remote-sre.ps1  remote_sre_ops.sh  remote_sync_bootstrap.sh  remote_sync_extract.sh  replay_events.py  restore_postgres.py  server_flyway_repair_v1.sh  server_flyway_rerun_9_to_11.sh  smoke_mod_orchestrator.py  sre_smoke_check.py  (+3 more)
MODstore_deploy/systemd/: modstore-scheduler.service.example  modstore.service.example  modstore@.service.example
MODstore_deploy/tests/: conftest.py  test_account_level.py  test_agent_butler_api.py  test_agent_runner_smoke.py  test_api.py  test_application_orchestration.py  test_authoring_slim.py  test_bench_platform_llm.py  test_blueprint_scan.py  test_catalog_api.py  test_catalog_sync.py  test_compose_config.py  test_coser_llm_billing.py  test_coverage_gates.py  test_customer_service_api.py  test_db_bundle.py  test_domain_isolation.py  test_email_service_config.py  test_embedding_service_dynamic.py  test_employee_ai_pipeline.py  test_employee_cognition_rag_inject.py  test_employee_config_v2_adapter.py  test_employee_full_chain.py  test_employee_pack_standalone.py  test_employee_real_skill_register.py  test_employee_vibe_actions.py  test_ensure_llm_master_key.py  test_eskill_runtime.py  test_eskill_vibe_adapter.py  test_event_contracts.py  test_event_outbox.py  test_event_schemas.py  test_event_subscribers.py  test_fhd_shell_export.py  test_file_safe.py  test_frontend_and_gateway_roadmap.py  test_jwt_secret_startup.py  test_key_export_crypto.py  test_knowledge_ingest.py  test_knowledge_v1_compat.py  (+47 more)
vibe-coding/: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
vibe-coding/docs/: AGENT_GUIDE.md  ARCHITECTURE.md  INTEGRATION.md  LANGUAGE_ADAPTERS.md  LLM_PROVIDERS.md  MARKETPLACE.md  MULTI_AGENT.md  OBSERVABILITY.md  P0_P1_CHECKLIST.md  SANDBOX_DRIVERS.md  TOOL_AGENT.md  UPGRADE_GUIDE.md  WEB_UI.md
vibe-coding/examples/: 01_minimal.py  02_self_healing.py  03_workflow.py  05_brief_first.py  (+1 more)
(+985 files in other folders)
