[project]
name = "modstore"
version = "0.2.0"
description = "MODstore：XCAGI Mod 库、制作、调试沙箱与同步"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
    "python-alipay-sdk>=3.4",
    "python-pptx>=0.6.23",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "prometheus-client>=0.20",
    "edge-tts>=6.1",
]
knowledge = [
    "chromadb>=0.5",
    "pypdf>=4.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.0",
    "openpyxl>=3.1",
]
employee-docs = [
    "pypdf>=4.0",
    "python-docx>=1.0",
]
aliyun-tts = [
    "dashscope>=1.14",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "isort>=5.13",
  "jsonschema>=4.21",
  "mypy>=1.8",
]

[project.scripts]
modman = "modman.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modman*", "modstore_server*"]

[tool.setuptools.package-data]
modman = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["modman", "modstore_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["modman", "modstore_server"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
# 适用于 ``coverage run`` + ``coverage report``；全量 tree 当前约 40%+，抬升需补测后再调。
fail_under = 80

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = ["."]
follow_imports = "skip"
# 分阶段扩大 ``files`` / ``packages``；先保证安全栈与注册入口可类型检查。
files = [
    "modstore_server/middleware_registry.py",
    "modstore_server/api/rate_limiter.py",
    "modstore_server/api/csrf.py",
    "modstore_server/api/xss_sanitizer.py",
]
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "redis.*",
    "edge_tts.*",
    "dashscope.*",
    "pptx.*",
    "fitz.*",
    "docx.*",
    "openpyxl.*",
]
ignore_missing_imports = true
