[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding"
version = "0.1.0"
description = "Standalone vibe coding: NL → sandbox-validated, self-healing Python skills + workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Vibe Coding Authors"}
]
keywords = ["vibe-coding", "ai-agent", "self-healing", "code-generation", "sandbox", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
test = ["pytest>=7.0"]
all = ["vibe-coding[llm,test]"]

[project.scripts]
vibe-coding = "vibe_coding.cli:main_entry"

[project.urls]
"Source" = "file://./"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
